<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="#fff0f0f0"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/lists_panel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#fff0f0f0"
            android:text="@string/ProjectServer_Locals"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ListView
            android:id="@+id/local_projects_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" >

        </ListView>

        <TextView
            android:id="@+id/textViewServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#fff0f0f0"
            android:text="@string/ProjectServer_Remotes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ListView
            android:id="@+id/remote_projects_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" >

        </ListView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView_project_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView_project_name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ProjectServer_BtnLoad"
                android:width="128dp" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ProjectServer_BtnUpdate"
                android:width="128dp" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ProjectServer_BtnDelete"
                android:width="128dp" />

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ProjectServer_BtnClose"
                android:width="128dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
